# gif_shop

./: .gitignore  README.md  build.sh  pyproject.toml  render.yaml
src/: manage.py
src/customers/: models.py
src/customers/migrations/: 0001_initial.py
src/gif_shop/: asgi.py  settings.py  urls.py  wsgi.py
src/helpers/: numbers.py
src/landing/: views.py
src/subscriptions/: views.py
src/subscriptions/migrations/: 0001_initial.py
src/templates/: base.html
src/templates/account/: base.html
src/templates/base/: messages.html
src/templates/dashboard/: base.html  main.html  nav.html  sidebar.html
src/templates/landing/: features.html  hero.html  proof.html
src/templates/nav/: navbar.html
src/templates/subscriptions/: pricing.html  user_cancel_view.html  user_detail_view.html
src/templates/subscriptions/snippets/: pricing-card.html
src/visits/migrations/: 0001_initial.py
